--- a/css/style.css
+++ b/css/style.css
@@ -461,7 +461,40 @@ a {
   display: flex;
   flex-direction: column;
   width: 100%;
-  font-family: "Quicksand";
+}
+.faq-accordion__paragraph {
+  align-self: center;
+  font-size: 1.4rem;
+  color: #ff816b;
+  font-weight: 600;
+}
+.faq-accordion__title {
+  align-self: center;
+  font-size: 2.8rem;
+  color: #221c30;
+  font-weight: 700;
+  margin-bottom: 3rem;
+}
+.faq-accordion__footer {
+  padding: 1.6rem 2.4rem;
+  margin-top: 2rem;
+}
+.faq-accordion__footer--title {
+  font-size: 1.8rem;
+  color: #221c30;
+  font-weight: 700;
+}
+.faq-accordion__footer--paragraph {
+  font-size: 1.6rem;
+  font-weight: 400;
+  margin-top: 1rem;
+  color: #756f82;
+  width: 100%;
+  text-align: left;
+}
+.faq-accordion__footer--paragraph span {
+  text-decoration: underline;
+  font-weight: 600;
 }
 
 .accordion {
@@ -484,6 +517,7 @@ a {
   font-weight: 700;
   color: #312845;
   text-align: left;
+  width: 70%;
 }
 .accordion__header--icon {
   width: 1.8rem;
