--- a/sass/components/_accordion.scss
+++ b/sass/components/_accordion.scss
@@ -18,6 +18,7 @@
       font-weight: $font-weight-bold;
       color: $color-gray-700;
       text-align: left;
+      width: 70%;
     }
 
     &--icon {
