--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,11 +6,13 @@
 @import "base/animations";
 @import "layout/navigation";
 @import "pages/home";
+@import "pages/testimonials";
 @import "pages/featuredPets";
 @import "pages/why-adopt";
 @import "pages/accordionSession";
 @import "components/accordion";
 @import "components/banner";
+@import "components/testimonialCard";
 @import "components/adoptionCard";
 @import "components/petCard";
 @import "components/petCardSlider";
