Fix: Fixed bug that was happening in prod with some mobile devices that the adoption link was't centralized

--- a/sass/pages/_featuredPets.scss
+++ b/sass/pages/_featuredPets.scss
@@ -31,6 +31,7 @@
     font-size: $font-mobile-body-12;
     font-weight: $font-weight-bold;
     text-decoration: underline;
+    justify-content: center;
 
     &--link {
       text-decoration: underline;
