Add: Added testimonial cards on mobile

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,5 +15,5 @@
 @import "components/testimonialCard";
 @import "components/adoptionCard";
 @import "components/petCard";
-@import "components/petCardSlider";
+@import "components/cardSlider";
 @import "components/header";
