--- a/css/style.css
+++ b/css/style.css
@@ -369,11 +369,12 @@ a {
 .testimonials {
   display: flex;
   flex-direction: column;
+  width: 100%;
   justify-content: center;
   align-items: center;
   margin-top: 5rem;
   text-align: center;
-  gap: 13rem;
+  gap: 1rem;
 }
 .testimonials__heading__feedback {
   color: #ff816b;
@@ -698,6 +699,35 @@ a {
     padding-bottom: 5.5rem;
   }
 }
+.testimonialCard {
+  width: 21rem;
+  height: 24.8rem;
+  padding: 1.6rem 2.4rem;
+  box-shadow: 0px 1px 15px 1px rgba(255, 129, 107, 0.2);
+  -webkit-box-shadow: 0px 1px 15px 1px rgba(255, 129, 107, 0.2);
+  -moz-box-shadow: 0px 1px 15px 1px rgba(255, 129, 107, 0.2);
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  text-align: start;
+  gap: 0.4rem;
+  border-radius: 0.6rem;
+}
+.testimonialCard__name {
+  color: #221c30;
+  font-size: 1.6rem;
+}
+.testimonialCard__location {
+  color: #312845;
+  font-size: 1.4rem;
+}
+.testimonialCard__paragraph {
+  color: #756f82;
+  font-size: 1.4rem;
+  width: 100%;
+}
+
 .adoption-cards {
   width: 100%;
   display: flex;
@@ -933,9 +963,10 @@ a {
 }
 
 .carousel {
+  box-sizing: border-box;
   display: flex;
   gap: 2rem;
-  padding: 2rem 1rem;
+  padding: 2rem 2rem;
   scroll-snap-type: x mandatory;
   scroll-behavior: smooth;
   overflow-x: auto;
@@ -945,6 +976,12 @@ a {
 .carousel li {
   scroll-snap-align: start;
   flex: 0 0 auto;
+}
+.carousel__spacer {
+  pointer-events: none;
+  min-width: 0.5rem;
+  height: 100%;
+  background: transparent;
 }
 
 @media (min-width: 1024px) and (max-width: 1399px) {
