--- a/css/style.css
+++ b/css/style.css
@@ -212,6 +212,7 @@ a {
   height: 19.5rem;
   background-image: linear-gradient(to left, #ff816b, #fff);
   position: relative;
+  margin-bottom: 1.5rem;
 }
 .homepage__picture__circle--orange {
   position: relative;
@@ -246,7 +247,7 @@ a {
 .homepage__text-and-buttons__heart-pawn {
   width: 1.8rem;
   height: 1.8rem;
-  margin-top: 1.6rem;
+  margin-top: 0.5rem;
 }
 .homepage__text-and-buttons__main-title {
   margin-top: 0.8rem;
@@ -393,6 +394,21 @@ a {
   font-weight: 600;
 }
 
+@media (min-width: 1024px) {
+  .testimonials {
+    margin-top: 7%;
+  }
+  .testimonials__heading__feedback {
+    display: none;
+  }
+  .testimonials__heading__title--main {
+    font-size: 3.2rem;
+  }
+  .testimonials__heading__title--secondary {
+    font-size: 2.4rem;
+    width: 100%;
+  }
+}
 .featured-pets {
   display: flex;
   justify-content: center;
@@ -405,7 +421,7 @@ a {
   justify-content: center;
   align-items: center;
   width: 100%;
-  margin-top: 4.8rem;
+  margin-top: 2.5rem;
 }
 .featured-pets__slogan {
   font-size: 1.6rem;
@@ -532,12 +548,13 @@ a {
 
 @media (min-width: 1024px) {
   .faq-accordion {
-    width: 65%;
-    margin-top: 4%;
+    width: 75%;
+    margin-top: 5%;
     justify-self: center;
   }
   .faq-accordion__title {
-    margin-bottom: 4%;
+    margin-bottom: 3%;
+    font-size: 3.2rem;
   }
   .faq-accordion__footer {
     display: none;
@@ -594,7 +611,8 @@ a {
 
 @media (min-width: 1024px) {
   .accordion__header--title {
-    font-size: 2.4rem;
+    font-size: 2rem;
+    font-weight: 600;
   }
   .accordion__body {
     width: 78%;
@@ -703,9 +721,9 @@ a {
   width: 21rem;
   height: 24.8rem;
   padding: 1.6rem 2.4rem;
-  box-shadow: 0px 1px 15px 1px rgba(255, 129, 107, 0.2);
-  -webkit-box-shadow: 0px 1px 15px 1px rgba(255, 129, 107, 0.2);
-  -moz-box-shadow: 0px 1px 15px 1px rgba(255, 129, 107, 0.2);
+  box-shadow: 0 4px 8px rgba(255, 129, 107, 0.3);
+  -webkit-box-shadow: 0 4px 8px rgba(255, 129, 107, 0.3);
+  -moz-box-shadow: 0 4px 10px rgba(255, 129, 107, 0.3);
   list-style: none;
   display: flex;
   flex-direction: column;
@@ -713,6 +731,7 @@ a {
   text-align: start;
   gap: 0.4rem;
   border-radius: 0.6rem;
+  border: 0.5px solid #ff816b;
 }
 .testimonialCard__name {
   color: #221c30;
@@ -728,6 +747,22 @@ a {
   width: 100%;
 }
 
+@media (min-width: 1024px) {
+  .testimonialCard {
+    width: 48.3rem;
+    height: 19.9rem;
+  }
+  .testimonialCard__name {
+    font-size: 2.4rem;
+  }
+  .testimonialCard__location {
+    font-size: 1.8rem;
+  }
+  .testimonialCard__paragraph {
+    font-size: 1.6rem;
+    width: 100%;
+  }
+}
 .adoption-cards {
   width: 100%;
   display: flex;
@@ -972,6 +1007,7 @@ a {
   overflow-x: auto;
   overflow-y: hidden;
   flex-wrap: nowrap;
+  list-style: none;
 }
 .carousel li {
   scroll-snap-align: start;
