--- a/sass/components/_accordion.scss
+++ b/sass/components/_accordion.scss
@@ -60,7 +60,8 @@
   .accordion {
     &__header {
       &--title {
-        font-size: $font-mobile-title-h3;
+        font-size: $font-desktop-title-h5;
+        font-weight: $font-weight-semi-bold;
       }
     }
     &__body {
