--- a/sass/components/_testimonialCard.scss
+++ b/sass/components/_testimonialCard.scss
@@ -2,20 +2,18 @@
     width: 21rem;
     height: 24.8rem;
     padding: 1.6rem 2.4rem;
-    box-shadow: 0px 1px 15px 1px rgba(255,129,107,0.20);
-    -webkit-box-shadow: 0px 1px 15px 1px rgba(255,129,107,0.20);
-    -moz-box-shadow: 0px 1px 15px 1px rgba(255,129,107,0.20);
+    @include drop-shadow;
     list-style: none;
     @include flex-column;
     justify-content: start;
     text-align: start;
     gap: .4rem;
     border-radius: .6rem;
+    border: 0.5px solid #ff816b;
 
     &__name {
         color: $color-gray-900;
         font-size: $font-mobile-title-h5;
-
     }
 
     &__location {
@@ -23,12 +21,31 @@
         font-size: $font-mobile-body-10;
     }
 
-
-
     &__paragraph {
         color: $color-gray-500;
         font-size: $font-mobile-body-10;
         width: 100%;
-
     }
+}
+
+@media (min-width: $breakpoint-desktop) {
+
+  .testimonialCard {
+    width: 48.3rem;
+    height: 19.9rem;
+
+    &__name {
+        font-size: $font-desktop-title-h4;
+    }
+
+    &__location {
+        font-size: $font-desktop-body-18;
+    }
+
+    &__paragraph {
+        font-size: $font-desktop-body-16;
+        width: 100%;
+    }
+  }
+  
 }
