--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -13,6 +13,7 @@
       $color-white
     );
     position: relative;
+    margin-bottom: 1.5rem;
 
     &__circle--orange {
       position: relative;
@@ -49,7 +50,7 @@
     &__heart-pawn {
       width: 1.8rem;
       height: 1.8rem;
-      margin-top: 1.6rem;
+      margin-top: .5rem;
     }
 
     &__main-title {
