--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,6 +5,7 @@
 @import "base/base";
 @import "base/animations";
 @import "layout/navigation";
+@import "layout/footerSection";
 @import "pages/home";
 @import "pages/testimonials";
 @import "pages/featuredPets";
