Fix: Fixed a few typos and wrong closing tags

--- a/sass/components/_accordion.scss
+++ b/sass/components/_accordion.scss
@@ -14,7 +14,7 @@
 
     &--title {
       font-size: $font-mobile-title-h4;
-      font-family: "Quicksand";
+      font-family: "Quicksand", sans-serif;
       font-weight: $font-weight-bold;
       color: $color-gray-700;
       text-align: left;
