--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -6,7 +6,7 @@
   border: none;
   cursor: pointer;
   font-weight: $font-weight-semi-bold;
-  font-family: "Quicksand";
+  font-family: "Quicksand", sans-serif;
 }
 
 @mixin defaultBtnTransparentBackground {
@@ -17,7 +17,7 @@
   border: 1px solid $color-primary-brand;
   cursor: pointer;
   font-weight: $font-weight-semi-bold;
-  font-family: "Quicksand";
+  font-family: "Quicksand", sans-serif;
 }
 
 @mixin flex-align-justify-center {
