--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -10,7 +10,7 @@ html {
 
 body {
   box-sizing: border-box;
-  font-family: "Quicksand";
+  font-family: "Quicksand", sans-serif;
   font-weight: 400;
   line-height: 1.5;
   color: $color-gray-700;
