--- a/sass/components/_cardSlider.scss
+++ b/sass/components/_cardSlider.scss
@@ -39,7 +39,7 @@
   }
 }
 
-// PC MEDIA QUERRY
+// PC MEDIA QUERY
 @media (min-width: $breakpoint-desktop) and (max-width: ($breakpoint-semi-big-desktop - 1px)) {
   .carousel {
     li:nth-child(4) {
@@ -48,7 +48,7 @@
   }
 }
 
-// SEMI-BIG PC MEDIA QUERRY
+// SEMI-BIG PC MEDIA QUERY
 @media (min-width: $breakpoint-semi-big-desktop) {
   .carousel {
     li:nth-child(3),
