--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,6 +7,7 @@
 @import "layout/navigation";
 @import "layout/footerSection";
 @import "pages/home";
+@import "pages/login";
 @import "pages/testimonials";
 @import "pages/featuredPets";
 @import "pages/why-adopt";
