--- a/sass/pages/_login.scss
+++ b/sass/pages/_login.scss
@@ -1,7 +1,4 @@
 .login {
-  @include flex-column;
-  align-items: center;
-  justify-content: center;
   width: 100%;
 
   &__headings {
@@ -10,6 +7,18 @@
     justify-content: center;
     gap: 1.2rem;
     margin-bottom: 2rem;
+  }
+
+  &__container {
+    width: 100%;
+    height: 100%;
+      @include flex-column;
+  align-items: center;
+  justify-content: center;
+  }
+
+  &__login-picture {
+    display: none;
   }
 
   &__logo {
@@ -88,5 +97,65 @@
     color: $color-secondary-dark;
     text-decoration: underline;
     font-weight: $font-weight-semi-bold;
+  }
+}
+
+@media (min-width: $breakpoint-desktop) {
+  body {
+    padding-top: 0 !important;
+    margin-top: 0 !important;
+  }
+
+  .login {
+    @include flex-row;
+    justify-content: space-between;
+    width: 100vw;
+    height: 100vh;
+
+    &__logo {
+      width: 17rem;
+      height: 3.8rem;
+    }
+
+    &__headings, &__form {
+      width: 70%;
+    }
+
+    &__input, &__btn {
+      width: 100%;
+    }
+
+    &__title {
+      font-size: $font-desktop-title-h3;
+    }
+
+    &__subtitle {
+      font-size: $font-desktop-body-24;
+    }
+
+    &__label, &__input::placeholder {
+      font-size: $font-desktop-body-20;
+      width: auto;
+    }
+
+    &__input::placeholder {
+      color: $color-gray-300;
+    }
+
+    &__container {
+      @include flex-align-justify-center;
+      width: 50%;
+    }
+
+    &__login-picture {
+      width: 50%;
+      height: 100vh;
+      display: block;
+      object-fit: cover;
+    }
+
+    &__forgot-password, &__text {
+      font-size: $font-desktop-body-18;
+    }
   }
 }
