--- a/css/style.css
+++ b/css/style.css
@@ -587,6 +587,61 @@ a {
     font-size: 1.8rem;
   }
 }
+.register {
+  width: 100%;
+}
+.register__register-picture {
+  display: none;
+}
+.register__headings {
+  display: flex;
+  flex-direction: column;
+  width: 90%;
+  justify-content: center;
+  gap: 1.2rem;
+  margin-bottom: 2rem;
+}
+.register__logo {
+  width: 12.7rem;
+  height: 3.4rem;
+}
+.register__container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.register__title {
+  font-size: 2.4rem;
+  color: #312845;
+  font-weight: 700;
+}
+.register__subtitle {
+  font-size: 1.6rem;
+  color: #756f82;
+  font-weight: 400;
+}
+.register__form {
+  display: flex;
+  flex-direction: column;
+  width: 90%;
+}
+.register__label {
+  font-size: 1.6rem;
+  color: #312845;
+  margin-top: 2.4rem;
+}
+.register__input {
+  border: 0.1rem solid #d1cfd4;
+  width: 100%;
+  height: 4.8rem;
+  border-radius: 0.8rem;
+  outline: none;
+  padding: 1rem;
+}
+
 .testimonials {
   display: flex;
   flex-direction: column;
