--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,6 +8,7 @@
 @import "layout/footerSection";
 @import "pages/home";
 @import "pages/login";
+@import "pages/register";
 @import "pages/testimonials";
 @import "pages/featuredPets";
 @import "pages/why-adopt";
