--- a/sass/pages/_register.scss
+++ b/sass/pages/_register.scss
@@ -10,7 +10,7 @@
     width: 90%;
     justify-content: center;
     gap: 1.2rem;
-    margin-bottom: 2rem;
+    margin-bottom: 1.2rem;
     }
 
     &__logo {
@@ -46,7 +46,8 @@
     &__label {
     font-size: $font-mobile-body-12;
     color: $color-gray-700;
-    margin-top: 2.4rem;
+    margin-top: 1.8rem;
+    font-weight: $font-weight-semi-bold;
     }
 
     &__input {
@@ -56,5 +57,61 @@
     border-radius: 0.8rem;
     outline: none;
     padding: 1rem;
+    }
+
+      &__input::placeholder {
+    padding: 1rem;
+    font-size: $font-mobile-body-12;
+    color: $color-gray-200;
+  }
+
+  &__input:focus::placeholder {
+    color: transparent;
+  }
+
+    &__btn {
+    @include defaultBtnPrimaryColorBackground;
+    @include drop-shadow;
+    font-size: $font-mobile-body-16;
+    height: 4.8rem;
+    }
+
+    &__link {
+        color: $color-secondary-dark;
+    text-decoration: underline;
+    font-weight: $font-weight-semi-bold;
+    }
+
+    &__text {
+        font-size: $font-mobile-body-12;
+    color: $color-gray-500;
+    font-weight: $font-weight-regular;
+    margin-top: 2.4rem;
+    text-align: center;
+    text-wrap: wrap;
+    }
+
+    &__checkbox {
+        @include flex-row;
+        gap: .8rem;
+        margin: 2rem 0;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: auto;
+    }
+
+    &__checkbox-input {
+        width: 3rem;
+        height: 3rem;
+        border: none;
+        border-radius: .6rem;
+        accent-color: $color-gray-900;
+    }
+
+    &__checkbox-label {
+    font-size: $font-mobile-body-12;
+    line-height: 1.8rem;
+    cursor: pointer;
     }
 }
